[package]
name = "panolution"
version = "0.1.0"
authors = ["Willi Kappler <grandor@gmx.de>"]
license = "MIT"
description = "Panorama photo stitching using evolutionary algorithm"
readme = "README.md"
repository = "https://github.com/willi-kappler/panolution"
exclude = ["*.png", "example", "target"]
keywords = ["stitch", "photo", "image", "evolutionary", "genetic"]
categories = ["algorithms", "multimedia::images"]

#[badges]
#travis-ci = {repository = "https://travis-ci.org/willi-kappler/panolution"}

[dependencies]
darwin-rs = "0.4"
clap = "2.25"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
log = "0.3"
simplelog = "0.4"
chrono = "0.4"
error-chain = "0.10"
itertools = "0.6"
walkdir = "1.0"
image = "0.14"
imageproc = "0.9"
rand = "0.3"

# Crates to consider:
# https://github.com/abonander/img_hash
# https://docs.rs/imageproc/0.9.0/imageproc/
# https://docs.rs/raster/0.2.0/raster/
# https://github.com/PistonDevelopers/resize
# https://github.com/meh/rust-picto
# https://github.com/warricksothr/Perceptual-Image-Hashing/
#

[profile.release]
lto = true
